--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:image" content="https://hjeong1111.github.io/portfolio2022/resources/default/images/common/thumb.jpg">
 	<title>HWANG HEE JEONG</title>
 
 	<link rel="shortcut icon" href="resources/default/images/common/favicon.png">
