--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="https://hjeong1111.github.io/portfolio2022/resources/default/images/common/thumb.jpg">
+	<meta property="og:image" content="resources/default/images/common/thumb.jpg">
 	<title>HWANG HEE JEONG</title>
 
 	<link rel="shortcut icon" href="resources/default/images/common/favicon.png">
 	<link rel="stylesheet" type="text/css" href="resources/default/css/common.css" />
-	<link rel="stylesheet" type="text/css" href="resources/default/css/layout.css" />
 	<link rel="stylesheet" type="text/css" href="resources/default/css/main.css" />
 
 	<script src="resources/default/js/jquery-3.6.0.min.js" type="text/javascript"></script>
-	<script src="resources/default/js/menu.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" href="resources/default/js/fullpage/jquery.fullPage.css">
 	<script src="resources/default/js/fullpage/jquery.fullPage.js"></script>
