--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
 				<div class="portfolio-box">
 					<ul class="portfolio-list">
 						<li>
+							<a href="https://itc.kaist.ac.kr/" target="_blank">
+								<figure class="img-wrap">
+									<img src="resources/default/images/main/thumb/카이스트 IT융합연구소.jpg" alt="카이스트 IT융합연구소">
+								</figure>
+								<div class="con-box">
+									<strong class="tit">카이스트 IT융합연구소</strong>
+									<ul>
+										<li>반응형</li>
+										<li>메인/서브 100%</li>
+									</ul>
+								</div>
+							</a>
+						</li>
+						<li>
 							<a href="https://kpc4ir.kaist.ac.kr/" target="_blank">
 								<figure class="img-wrap">
 									<img src="resources/default/images/main/thumb/KPC4IR.jpg" alt="KAIST 한국4차산업혁명정책센터(KPC4IR)">
