--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 					<div class="contact-box">
 						<ul class="contact-list">
 							<li class="mail">hhj9658@gmail.com</li>
-							<li class="tell">010-6710-0530</li>
 						</ul>
 					</div>
 				</div>
@@ -105,6 +104,48 @@
 					</div>
 					<div id="tab-00" class="tab-con current">
 						<ul class="portfolio-list">
+							<li>
+								<a href="https://ct.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/카이스트 문화기술대학원.jpg" alt="카이스트 문화기술대학원">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">카이스트 문화기술대학원</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="https://rnd.dongguk.edu/ko/page/main.do" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/동국대학교 산학협력단.jpg" alt="동국대학교 산학협력단">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">동국대학교 산학협력단</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="http://surfchem.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/카이스트 Energy Materials Lab.jpg" alt="카이스트 Energy Materials Lab">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">카이스트 Energy Materials Lab</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
 							<li>
 								<a href="https://www.inmm.or.kr/" target="_blank">
 									<figure class="img-wrap">
@@ -141,8 +182,22 @@
 									<div class="con-box">
 										<strong class="tit">KAIST 한국4차산업혁명정책센터(KPC4IR)</strong>
 										<ul>
-											<li>반응형/웹 접근성</li>
-											<li>서브 참여 및 3차 접근성 인증</li>
+											<li>웹 접근성</li>
+											<li>3차 웹 접근성 인증</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="http://mcmkaist.com/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/KARA.jpg" alt="KARA">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">KARA</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인100% /서브 참여</li>
 										</ul>
 									</div>
 								</a>
@@ -161,22 +216,6 @@
 									</div>
 								</a>
 							</li>
-							<!--
-							<li>
-								<a href="https://ae.kaist.ac.kr" target="_blank">
-									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/카이스트 인공지능경영자과정.jpg" alt="카이스트 인공지능경영자과정">
-									</figure>
-									<div class="con-box">
-										<strong class="tit">카이스트 인공지능경영자과정</strong>
-										<ul>
-											<li>반응형</li>
-											<li>메인/서브 100%</li>
-										</ul>
-									</div>
-								</a>
-							</li>
-							-->
 							<li>
 								<a href="https://ae.kaist.ac.kr" target="_blank">
 									<figure class="img-wrap">
@@ -530,7 +569,7 @@
 							</li>
 		
 							<li>
-								<a href="http://polysci.kaist.ac.kr/" target="_blank">
+								<a href="https://www.p9net.org" target="_blank">
 									<figure class="img-wrap">
 										<img src="resources/default/images/main/thumb/나무와숲.jpg" alt="나무와숲(주) 아동정서행동 관찰시스템">
 									</figure>
@@ -656,6 +695,20 @@
 								</a>
 							</li>
 							<li>
+								<a href="https://kpc4ir.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/KPC4IR.jpg" alt="KAIST 한국4차산업혁명정책센터(KPC4IR)">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">KAIST 한국4차산업혁명정책센터(KPC4IR)</strong>
+										<ul>
+											<li>반응형</li>
+											<li>서브 참여</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
 								<a href="https://mse.kaist.ac.kr/" target="_blank">
 									<figure class="img-wrap">
 										<img src="resources/default/images/main/thumb/카이스트 신소재공학과.jpg" alt="KAIST 신소재공학과">
@@ -687,6 +740,48 @@
 					</div>
 					<div id="tab-01" class="tab-con">
 						<ul class="portfolio-list">
+							<li>
+								<a href="https://ct.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/카이스트 문화기술대학원.jpg" alt="카이스트 문화기술대학원">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">카이스트 문화기술대학원</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="https://rnd.dongguk.edu/ko/page/main.do" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/동국대학교 산학협력단.jpg" alt="동국대학교 산학협력단">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">동국대학교 산학협력단</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="http://surfchem.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/카이스트 Energy Materials Lab.jpg" alt="카이스트 Energy Materials Lab">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">카이스트 Energy Materials Lab</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
 							<li>
 								<a href="https://www.inmm.or.kr/" target="_blank">
 									<figure class="img-wrap">
@@ -723,8 +818,8 @@
 									<div class="con-box">
 										<strong class="tit">KAIST 한국4차산업혁명정책센터(KPC4IR)</strong>
 										<ul>
-											<li>반응형/웹 접근성</li>
-											<li>서브 참여 및 3차 접근성 인증</li>
+											<li>웹 접근성</li>
+											<li>3차 접근성 인증</li>
 										</ul>
 									</div>
 								</a>
@@ -733,6 +828,20 @@
 					</div>
 					<div id="tab-02" class="tab-con">
 						<ul class="portfolio-list">
+							<li>
+								<a href="http://mcmkaist.com/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/KARA.jpg" alt="KARA">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">KARA</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인100% /서브 참여</li>
+										</ul>
+									</div>
+								</a>
+							</li>
 							<li>
 								<a href="https://mbi.kaist.ac.kr/" target="_blank">
 									<figure class="img-wrap">
@@ -747,22 +856,6 @@
 									</div>
 								</a>
 							</li>
-							<!--
-							<li>
-								<a href="https://ae.kaist.ac.kr" target="_blank">
-									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/카이스트 인공지능경영자과정.jpg" alt="카이스트 인공지능경영자과정">
-									</figure>
-									<div class="con-box">
-										<strong class="tit">카이스트 인공지능경영자과정</strong>
-										<ul>
-											<li>반응형</li>
-											<li>메인/서브 100%</li>
-										</ul>
-									</div>
-								</a>
-							</li>
-							-->
 							<li>
 								<a href="https://ae.kaist.ac.kr" target="_blank">
 									<figure class="img-wrap">
@@ -1243,6 +1336,20 @@
 										<ul>
 											<li>반응형</li>
 											<li>메인/서브 100%</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="https://kpc4ir.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/KPC4IR.jpg" alt="KAIST 한국4차산업혁명정책센터(KPC4IR)">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">KAIST 한국4차산업혁명정책센터(KPC4IR)</strong>
+										<ul>
+											<li>반응형</li>
+											<li>서브 참여</li>
 										</ul>
 									</div>
 								</a>
