--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="http://polysci.kaist.ac.kr/" target="_blank">
+								<a href="https://www.p9net.org/" target="_blank">
 									<figure class="img-wrap">
 										<img src="resources/default/images/main/thumb/나무와숲.jpg" alt="나무와숲(주) 아동정서행동 관찰시스템">
 									</figure>
