--- a/index.html
+++ b/index.html
@@ -105,9 +105,23 @@
 					<div id="tab-00" class="tab-con current">
 						<ul class="portfolio-list">
 							<li>
+								<a href="https://ghss.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/KAIST 인문사회과학대학원.jpg" alt="KAIST 디지털인문사회과학대학원">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">KAIST 인문사회과학대학원</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인 85%/서브 참여</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
 								<a href="javascript:void(0);" onclick="alert('프로젝트 진행중')">
 									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/해수부 여수.jpg" alt="해수부 여수.jpg">
+										<img src="resources/default/images/main/thumb/해수부 여수.jpg" alt="해수부 여수">
 									</figure>
 									<div class="con-box">
 										<strong class="tit">해수부 여수</strong>
@@ -121,7 +135,7 @@
 							<li>
 								<a href="javascript:void(0);" onclick="alert('프로젝트 진행중')">
 									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/발효미생물산업진흥원.jpg" alt="발효미생물산업진흥원.jpg">
+										<img src="resources/default/images/main/thumb/발효미생물산업진흥원.jpg" alt="발효미생물산업진흥원">
 									</figure>
 									<div class="con-box">
 										<strong class="tit">재단법인 발효미생물산업진흥원</strong>
@@ -135,7 +149,7 @@
 							<li>
 								<a href="http://nursingkms.cnuh.co.kr/nkmp_type_test/" target="_blank">
 									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/충남대학교 간호지식관리플랫폼 꼬꼬무.jpg" alt="충남대학교 충남대학교 간호지식관리플랫폼 꼬꼬무.jpg">
+										<img src="resources/default/images/main/thumb/충남대학교 간호지식관리플랫폼 꼬꼬무.jpg" alt="충남대학교 간호지식관리플랫폼 꼬꼬무">
 									</figure>
 									<div class="con-box">
 										<strong class="tit">충남대학교 간호지식관리플랫폼 꼬꼬무</strong>
@@ -811,9 +825,23 @@
 					<div id="tab-01" class="tab-con">
 						<ul class="portfolio-list">
 							<li>
+								<a href="https://ghss.kaist.ac.kr/" target="_blank">
+									<figure class="img-wrap">
+										<img src="resources/default/images/main/thumb/KAIST 인문사회과학대학원.jpg" alt="KAIST 디지털인문사회과학대학원">
+									</figure>
+									<div class="con-box">
+										<strong class="tit">KAIST 인문사회과학대학원</strong>
+										<ul>
+											<li>반응형</li>
+											<li>메인 85%/서브 참여</li>
+										</ul>
+									</div>
+								</a>
+							</li>
+							<li>
 								<a href="javascript:void(0);" onclick="alert('프로젝트 진행중')">
 									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/해수부 여수.jpg" alt="해수부 여수.jpg">
+										<img src="resources/default/images/main/thumb/해수부 여수.jpg" alt="해수부 여수">
 									</figure>
 									<div class="con-box">
 										<strong class="tit">해수부 여수</strong>
@@ -827,7 +855,7 @@
 							<li>
 								<a href="javascript:void(0);" onclick="alert('프로젝트 진행중')">
 									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/발효미생물산업진흥원.jpg" alt="발효미생물산업진흥원.jpg">
+										<img src="resources/default/images/main/thumb/발효미생물산업진흥원.jpg" alt="발효미생물산업진흥원">
 									</figure>
 									<div class="con-box">
 										<strong class="tit">재단법인 발효미생물산업진흥원</strong>
@@ -841,7 +869,7 @@
 							<li>
 								<a href="http://nursingkms.cnuh.co.kr/nkmp_type_test/" target="_blank">
 									<figure class="img-wrap">
-										<img src="resources/default/images/main/thumb/충남대학교 간호지식관리플랫폼 꼬꼬무.jpg" alt="충남대학교 충남대학교 간호지식관리플랫폼 꼬꼬무.jpg">
+										<img src="resources/default/images/main/thumb/충남대학교 간호지식관리플랫폼 꼬꼬무.jpg" alt="충남대학교 간호지식관리플랫폼 꼬꼬무">
 									</figure>
 									<div class="con-box">
 										<strong class="tit">충남대학교 간호지식관리플랫폼 꼬꼬무</strong>
